# servagent

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENCE  README.md  generate-oauth-credentials.sh  install-remote.sh  install.sh  main.py  nginx.conf.example  pyproject.toml  setup-tls.sh  uninstall.sh  update.sh
docs/assets/: logo-ascii-art.txt
src/servagent/: __init__.py  auth.py  cli.py  config.py  oauth_provider.py  server.py  tools.py
