[project]
name = "servagent"
version = "0.1.0"
description = "MCP Server for remote server administration - Full system control via AI"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Odura" },
]
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "click>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/servagent"]
sources = ["src"]

[project.scripts]
servagent = "servagent.cli:cli"
